# Fast-FoundationStereo

./: .dockerignore  .gitignore  Justfile  mise.toml  pyproject.toml  readme.md
cpp/: README.md
docker/: docker-compose.yml  dockerfile_cpp  dockerfile_ros2  ros2_entrypoint.sh  run_ros2_container.sh
ros2/: README.md
ros2/ffs_ros/: CMakeLists.txt  package.xml
ros2/ffs_ros/config/: ffs_stereo.yaml
ros2/ffs_ros/launch/: ffs_stereo.launch.py
ros2/ffs_ros/src/: ffs_stereo_node.cpp
scripts/: build_single_trt.py  make_onnx.py  run_demo.py  run_demo_single_trt.py  run_demo_tensorrt.py
